primeira bateria de testes unitários